--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,24 +1,12 @@
 <section id="mountain">
   <div class="mountain">
-    <div class="mountain-top">
-      <div class="mountain-cap-1"></div>
-      <div class="mountain-cap-2"></div>
-      <div class="mountain-cap-3"></div>
-    </div>
+    {{mountain-top}}
   </div>
   <div class="mountain-two">
-    <div class="mountain-top">
-      <div class="mountain-cap-1"></div>
-      <div class="mountain-cap-2"></div>
-      <div class="mountain-cap-3"></div>
-    </div>
+    {{mountain-top}}
   </div>
    <div class="mountain-three">
-    <div class="mountain-top">
-      <div class="mountain-cap-1"></div>
-      <div class="mountain-cap-2"></div>
-      <div class="mountain-cap-3"></div>
-    </div>
+     {{mountain-top}}
   </div>
   <div class="mountain-four">
     <div class="mountain-top-small">
@@ -35,4 +23,16 @@
     </div>
   </div>
   <div class="cloud"></div>
+</section>
+
+<section id="trees">
+  {{tree-section id="tree-1"}}
+  {{tree-section id="tree-2"}}
+  {{tree-section id="tree-3"}}
+  {{tree-section id="tree-4"}}
+  {{tree-section}}
+  {{tree-section id="tree1"}}
+  {{tree-section id="tree2"}}
+  {{tree-section id="tree3"}}
+  {{tree-section id="tree4"}}
 </section>
