--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -26,13 +26,11 @@
 </section>
 
 <section id="trees">
-  {{tree-section id="tree-1"}}
-  {{tree-section id="tree-2"}}
-  {{tree-section id="tree-3"}}
-  {{tree-section id="tree-4"}}
-  {{tree-section}}
-  {{tree-section id="tree1"}}
-  {{tree-section id="tree2"}}
-  {{tree-section id="tree3"}}
-  {{tree-section id="tree4"}}
+  {{tree-section id="tree-1" class="pos"}}
+  {{tree-section id="tree-2" class="pos"}}
+  {{tree-section id="tree0" class="pos"}}
+  {{tree-section id="tree1" class="pos"}}
+  {{tree-section id="tree2" class="pos"}}
+  {{tree-section id="tree3" class="pos"}}
+  {{tree-section id="tree4" class="pos" }}
 </section>
