--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -360,55 +360,55 @@
 }
 .tree__item_5 .tree__stamb:before {
   border-left: 7px solid transparent;
-  border-bottom: 170px solid #5f5f5f;
+  border-bottom: 170px solid #302525; /*#5f5f5f*/
 }
 .tree__item_5 .tree__stamb:after {
   border-right: 7px solid transparent;
-  border-bottom: 170px solid #454545;
+  border-bottom: 170px solid #231f21; /*grey  #454545*/
 }
 .tree__item_5 .tree__branch_1 {
   height: 40px;
 }
 .tree__item_5 .tree__branch_1:before {
   border-left: 30px solid transparent;
-  border-bottom: 60px solid #787878;
+  border-bottom: 60px solid #567a42;
 }
 .tree__item_5 .tree__branch_1:after {
   border-right: 30px solid transparent;
-  border-bottom: 60px solid #525252;
+  border-bottom: 60px solid #2e4c27;
 }
 .tree__item_5 .tree__branch_2 {
   height: 40px;
 }
 .tree__item_5 .tree__branch_2:before {
   border-left: 40px solid transparent;
-  border-bottom: 80px solid #787878;
+  border-bottom: 80px solid #567a42;
 }
 .tree__item_5 .tree__branch_2:after {
   border-right: 40px solid transparent;
-  border-bottom: 80px solid #525252;
+  border-bottom: 80px solid #2e4c27;
 }
 .tree__item_5 .tree__branch_3 {
   height: 40px;
 }
 .tree__item_5 .tree__branch_3:before {
   border-left: 50px solid transparent;
-  border-bottom: 100px solid #787878;
+  border-bottom: 100px solid #567a42;
 }
 .tree__item_5 .tree__branch_3:after {
   border-right: 50px solid transparent;
-  border-bottom: 100px solid #525252;
+  border-bottom: 100px solid #2e4c27;
 }
 .tree__item_5 .tree__branch_4 {
   height: 40px;
 }
 .tree__item_5 .tree__branch_4:before {
   border-left: 60px solid transparent;
-  border-bottom: 120px solid #787878;
+  border-bottom: 120px solid #567a42;
 }
 .tree__item_5 .tree__branch_4:after {
   border-right: 60px solid transparent;
-  border-bottom: 120px solid #525252;
+  border-bottom: 120px solid #2e4c27;
 }
 
 .tree__item_6 {
@@ -423,55 +423,55 @@
 }
 .tree__item_6 .tree__stamb:before {
   border-left: 7px solid transparent;
-  border-bottom: 170px solid #5c5353;
+  border-bottom: 170px solid rgb(53, 34, 33);
 }
 .tree__item_6 .tree__stamb:after {
   border-right: 7px solid transparent;
-  border-bottom: 170px solid #413b3b;
+  border-bottom: 170px solid rgb(41, 31, 35);
 }
 .tree__item_6 .tree__branch_1 {
   height: 47px;
 }
 .tree__item_6 .tree__branch_1:before {
   border-left: 27px solid transparent;
-  border-bottom: 72px solid #776B6B;
+  border-bottom: 72px solid rgb(56, 112, 24);
 }
 .tree__item_6 .tree__branch_1:after {
   border-right: 27px solid transparent;
-  border-bottom: 72px solid #4f4747;
+  border-bottom: 72px solid rgb(28, 76, 16);
 }
 .tree__item_6 .tree__branch_2 {
   height: 47px;
 }
 .tree__item_6 .tree__branch_2:before {
   border-left: 36px solid transparent;
-  border-bottom: 96px solid #776B6B;
+  border-bottom: 96px solid rgb(56, 112, 24);
 }
 .tree__item_6 .tree__branch_2:after {
   border-right: 36px solid transparent;
-  border-bottom: 96px solid #4f4747;
+  border-bottom: 96px solid rgb(28, 76, 16);
 }
 .tree__item_6 .tree__branch_3 {
   height: 47px;
 }
 .tree__item_6 .tree__branch_3:before {
   border-left: 45px solid transparent;
-  border-bottom: 120px solid #776B6B;
+  border-bottom: 120px solid rgb(56, 112, 24);
 }
 .tree__item_6 .tree__branch_3:after {
   border-right: 45px solid transparent;
-  border-bottom: 120px solid #4f4747;
+  border-bottom: 120px solid rgb(28, 76, 16);
 }
 .tree__item_6 .tree__branch_4 {
   height: 47px;
 }
 .tree__item_6 .tree__branch_4:before {
   border-left: 54px solid transparent;
-  border-bottom: 144px solid #776B6B;
+  border-bottom: 144px solid rgb(56, 112, 24);
 }
 .tree__item_6 .tree__branch_4:after {
   border-right: 54px solid transparent;
-  border-bottom: 144px solid #4f4747;
+  border-bottom: 144px solid rgb(28, 76, 16);
 }
 
 .tree__item_10 {
@@ -486,55 +486,55 @@
 }
 .tree__item_10 .tree__stamb:before {
   border-left: 10px solid transparent;
-  border-bottom: 250px solid #8fae6f;
+  border-bottom: 250px solid rgb(82, 76, 94);
 }
 .tree__item_10 .tree__stamb:after {
   border-right: 10px solid transparent;
-  border-bottom: 250px solid #759555;
+  border-bottom: 250px solid rgb(61, 46, 79);
 }
 .tree__item_10 .tree__branch_1 {
   height: 60px;
 }
 .tree__item_10 .tree__branch_1:before {
   border-left: 24px solid transparent;
-  border-bottom: 75px solid #A8C090;
+  border-bottom: 75px solid rgb(237, 54, 171);
 }
 .tree__item_10 .tree__branch_1:after {
   border-right: 24px solid transparent;
-  border-bottom: 75px solid #82a45f;
+  border-bottom: 75px solid rgb(168, 63, 105);
 }
 .tree__item_10 .tree__branch_2 {
   height: 60px;
 }
 .tree__item_10 .tree__branch_2:before {
   border-left: 32px solid transparent;
-  border-bottom: 100px solid #A8C090;
+  border-bottom: 100px solid rgb(237, 54, 171);
 }
 .tree__item_10 .tree__branch_2:after {
   border-right: 32px solid transparent;
-  border-bottom: 100px solid #82a45f;
+  border-bottom: 100px solid rgb(168, 63, 105);
 }
 .tree__item_10 .tree__branch_3 {
   height: 60px;
 }
 .tree__item_10 .tree__branch_3:before {
   border-left: 40px solid transparent;
-  border-bottom: 125px solid #A8C090;
+  border-bottom: 125px solid rgb(237, 54, 171);
 }
 .tree__item_10 .tree__branch_3:after {
   border-right: 40px solid transparent;
-  border-bottom: 125px solid #82a45f;
+  border-bottom: 125px solid rgb(168, 63, 105);
 }
 .tree__item_10 .tree__branch_4 {
   height: 60px;
 }
 .tree__item_10 .tree__branch_4:before {
   border-left: 48px solid transparent;
-  border-bottom: 150px solid #A8C090;
+  border-bottom: 150px solid rgb(237, 54, 171); /*lighter color rgb(46, 145, 133)*/
 }
 .tree__item_10 .tree__branch_4:after {
   border-right: 48px solid transparent;
-  border-bottom: 150px solid #82a45f;
+  border-bottom: 150px solid rgb(168, 63, 105);
 }
 
 .tree__item_11 {
@@ -549,55 +549,55 @@
 }
 .tree__item_11 .tree__stamb:before {
   border-left: 10px solid transparent;
-  border-bottom: 250px solid #aab681;
+  border-bottom: 250px solid rgb(85, 72, 68);
 }
 .tree__item_11 .tree__stamb:after {
   border-right: 10px solid transparent;
-  border-bottom: 250px solid #95a460;
+  border-bottom: 250px solid rgb(73, 50, 52);
 }
 .tree__item_11 .tree__branch_1 {
   height: 55px;
 }
 .tree__item_11 .tree__branch_1:before {
   border-left: 24px solid transparent;
-  border-bottom: 75px solid #C0C9A1;
+  border-bottom: 75px solid rgb(230, 147, 58);
 }
 .tree__item_11 .tree__branch_1:after {
   border-right: 24px solid transparent;
-  border-bottom: 75px solid #9fad70;
+  border-bottom: 75px solid rgb(212, 100, 35);
 }
 .tree__item_11 .tree__branch_2 {
   height: 55px;
 }
 .tree__item_11 .tree__branch_2:before {
   border-left: 32px solid transparent;
-  border-bottom: 100px solid #C0C9A1;
+  border-bottom: 100px solid rgb(230, 147, 58);
 }
 .tree__item_11 .tree__branch_2:after {
   border-right: 32px solid transparent;
-  border-bottom: 100px solid #9fad70;
+  border-bottom: 100px solid rgb(212, 100, 35);
 }
 .tree__item_11 .tree__branch_3 {
   height: 55px;
 }
 .tree__item_11 .tree__branch_3:before {
   border-left: 40px solid transparent;
-  border-bottom: 125px solid #C0C9A1;
+  border-bottom: 125px solid rgb(230, 147, 58);
 }
 .tree__item_11 .tree__branch_3:after {
   border-right: 40px solid transparent;
-  border-bottom: 125px solid #9fad70;
+  border-bottom: 125px solid rgb(212, 100, 35);
 }
 .tree__item_11 .tree__branch_4 {
   height: 55px;
 }
 .tree__item_11 .tree__branch_4:before {
   border-left: 48px solid transparent;
-  border-bottom: 150px solid #C0C9A1;
+  border-bottom: 150px solid rgb(230, 147, 58);
 }
 .tree__item_11 .tree__branch_4:after {
   border-right: 48px solid transparent;
-  border-bottom: 150px solid #9fad70;
+  border-bottom: 150px solid rgb(212, 100, 35);
 }
 
 .tree__item_12 {
@@ -612,55 +612,55 @@
 }
 .tree__item_12 .tree__stamb:before {
   border-left: 10px solid transparent;
-  border-bottom: 250px solid #7c9463;
+  border-bottom: 250px solid rgb(80, 69, 99);
 }
 .tree__item_12 .tree__stamb:after {
   border-right: 10px solid transparent;
-  border-bottom: 250px solid #62754f;
+  border-bottom: 250px solid rgb(61, 46, 79);
 }
 .tree__item_12 .tree__branch_1 {
   height: 55px;
 }
 .tree__item_12 .tree__branch_1:before {
   border-left: 24px solid transparent;
-  border-bottom: 75px solid #95AA80;
+  border-bottom: 75px solid rgb(224, 65, 166);
 }
 .tree__item_12 .tree__branch_1:after {
   border-right: 24px solid transparent;
-  border-bottom: 75px solid #6f8559;
+  border-bottom: 75px solid rgb(162, 23, 79);
 }
 .tree__item_12 .tree__branch_2 {
   height: 55px;
 }
 .tree__item_12 .tree__branch_2:before {
   border-left: 32px solid transparent;
-  border-bottom: 100px solid #95AA80;
+  border-bottom: 100px solid rgb(224, 65, 166);
 }
 .tree__item_12 .tree__branch_2:after {
   border-right: 32px solid transparent;
-  border-bottom: 100px solid #6f8559;
+  border-bottom: 100px solid rgb(162, 23, 79);
 }
 .tree__item_12 .tree__branch_3 {
   height: 55px;
 }
 .tree__item_12 .tree__branch_3:before {
   border-left: 40px solid transparent;
-  border-bottom: 125px solid #95AA80;
+  border-bottom: 125px solid rgb(224, 65, 166);
 }
 .tree__item_12 .tree__branch_3:after {
   border-right: 40px solid transparent;
-  border-bottom: 125px solid #6f8559;
+  border-bottom: 125px solid rgb(162, 23, 79);
 }
 .tree__item_12 .tree__branch_4 {
   height: 55px;
 }
 .tree__item_12 .tree__branch_4:before {
   border-left: 48px solid transparent;
-  border-bottom: 150px solid #95AA80;
+  border-bottom: 150px solid rgb(224, 65, 166);
 }
 .tree__item_12 .tree__branch_4:after {
   border-right: 48px solid transparent;
-  border-bottom: 150px solid #6f8559;
+  border-bottom: 150px solid rgb(162, 23, 79);
 }
 
 #trees {
