--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,7 +1,9 @@
 <section id="mountain">
-  <div class="mountain">
+<article class="parallax-container">
+  <div class="mountain parallax">
     {{mountain-top}}
   </div>
+</article>
   <div class="mountain-two">
     {{mountain-top}}
   </div>
