--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,27 +1,27 @@
 <section id="mountain">
-<article class="parallax-container">
-  <div class="mountain parallax">
-    {{mountain-top}}
-  </div>
-</article>
-  <div class="mountain-two">
-    {{mountain-top}}
-  </div>
-   <div class="mountain-three">
-     {{mountain-top}}
-  </div>
-  <div class="mountain-four">
-    <div class="mountain-top-small">
-      <div class="mountain-cap-1s"></div>
-      <div class="mountain-cap-2s"></div>
-      <div class="mountain-cap-3s"></div>
+  <div id="slide1" class="slide">
+    <div class="mountain">
+      {{mountain-top}}
     </div>
-  </div>
-  <div class="mountain-five">
-    <div class="mountain-top-small">
-      <div class="mountain-cap-1s"></div>
-      <div class="mountain-cap-2s"></div>
-      <div class="mountain-cap-3s"></div>
+    <div class="mountain-two">
+      {{mountain-top}}
+    </div>
+     <div class="mountain-three">
+       {{mountain-top}}
+    </div>
+    <div class="mountain-four">
+      <div class="mountain-top-small">
+        <div class="mountain-cap-1s"></div>
+        <div class="mountain-cap-2s"></div>
+        <div class="mountain-cap-3s"></div>
+      </div>
+    </div>
+    <div class="mountain-five">
+      <div class="mountain-top-small">
+        <div class="mountain-cap-1s"></div>
+        <div class="mountain-cap-2s"></div>
+        <div class="mountain-cap-3s"></div>
+      </div>
     </div>
   </div>
   <div class="cloud"></div>
@@ -37,4 +37,7 @@
   {{tree-section id="tree4" class="pos" }}
 </section>
 
-{{camp-fire}}
+<section>
+  {{skill-board model=model}}
+  {{camp-fire}}
+</section>
