--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -28,6 +28,7 @@
 </section>
 
 <section id="trees">
+  <div class="shadow1"></div>
   {{tree-section id="tree-1" class="pos"}}
   {{tree-section id="tree-2" class="pos"}}
   {{tree-section id="tree0" class="pos"}}
