--- a/app/templates/components/skill-board.hbs
+++ b/app/templates/components/skill-board.hbs
@@ -7,5 +7,21 @@
         </p>
       {{/each}}
     </div>
+      <div class="right leg"></div>
+      <div class="left leg"></div>
+      <div class="ground">
+        <div class="grass"></div>
+        <div class="grass"></div>
+        <div class="grass"></div>
+        <div class="grass"></div>
+        <div class="grass"></div>
+      </div>
+      <div id="groundRight">
+        <div class="grass"></div>
+        <div class="grass"></div>
+        <div class="grass"></div>
+        <div class="grass"></div>
+        <div class="grass"></div>
+      </div>
   </div>
 </div>
